# ForgeEngine

./: .gitignore  CMakeLists.txt
lib/: Game.cpp  Game.h
lib/input/: InputEvent.cpp  InputEvent.h  InputSystem.cpp  InputSystem.h
lib/world_space/: GameObject.cpp  GameObject.h  Renderable.cpp  Renderable.h  Sprite.cpp  Sprite.h  Vector2D.h
